--- a/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/MainStoryboard.storyboard
+++ b/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="ugd-EL-KOj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="ugd-EL-KOj">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -476,14 +476,14 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             <objects>
                 <viewController id="BxA-Tk-9iq" customClass="TaskListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lgU-Ib-JOd">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="monsterNavBar-TableBackdrop.png" id="B19-L6-Cts">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="198"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="turtling.png" id="0yb-ma-iDx">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="turtling.png" id="0yb-ma-iDx" customClass="MonsterEvolutionImageView">
                                 <rect key="frame" x="7" y="21" width="128" height="98"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -516,7 +516,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="55" sectionHeaderHeight="22" sectionFooterHeight="22" id="v31-ZF-vPC">
-                                <rect key="frame" x="0.0" y="199" width="320" height="217"/>
+                                <rect key="frame" x="0.0" y="199" width="320" height="261"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -575,20 +575,24 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                     <outlet property="delegate" destination="BxA-Tk-9iq" id="cWd-dV-aNq"/>
                                 </connections>
                             </textField>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" image="turtling_leftEye.png" id="caX-se-GBT">
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" image="turtling_leftEye.png" id="caX-se-GBT" customClass="MonsterEvolutionImageView">
                                 <rect key="frame" x="35" y="59" width="28" height="27"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" image="turtling_rightEye.png" id="6IF-4L-OnO">
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" image="turtling_rightEye.png" id="6IF-4L-OnO" customClass="MonsterEvolutionImageView">
                                 <rect key="frame" x="76" y="58" width="28" height="27"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="turtling-blushcheeks.png" id="qLg-9q-pQ8">
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="turtling-blushcheeks.png" id="qLg-9q-pQ8" customClass="MonsterEvolutionImageView">
                                 <rect key="frame" x="19" y="76" width="101" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="turtling-mouth_open.png" id="XId-qq-Kv0">
                                 <rect key="frame" x="55" y="81" width="28" height="12"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="cI3-8N-ysZ" customClass="MonsterEvolutionImageView">
+                                <rect key="frame" x="7" y="7" width="128" height="140"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -600,12 +604,13 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         <outlet property="customStepTextField" destination="z0l-Au-ZVa" id="f7n-UF-XkE"/>
                         <outlet property="dateLabel" destination="W7b-FM-5N1" id="Lrr-Op-fcg"/>
                         <outlet property="fullMonsterImage" destination="0yb-ma-iDx" id="8Ep-DF-8x8"/>
+                        <outlet property="monsterEvolutionImage" destination="cI3-8N-ysZ" id="Pvr-rg-Q2U"/>
                         <outlet property="monsterLeftEyeImage" destination="caX-se-GBT" id="va4-Hn-h5j"/>
                         <outlet property="monsterRightEyeImage" destination="6IF-4L-OnO" id="fPA-dF-Z5K"/>
                         <outlet property="mouthOpenImage" destination="XId-qq-Kv0" id="TKM-nQ-sFW"/>
                         <outlet property="taskTable" destination="v31-ZF-vPC" id="VJY-dv-Tjb"/>
                         <outlet property="xpLabel" destination="Mhv-Px-7VM" id="cht-oa-zRp"/>
-                        <segue destination="QKW-bl-A1g" kind="push" identifier="segueToEvolve" id="6NC-QV-JGK"/>
+                        <segue destination="QKW-bl-A1g" kind="modal" identifier="segueToEvolve" id="6NC-QV-JGK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Ns-Ek-dbq" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -840,15 +845,15 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             <objects>
                 <viewController id="QKW-bl-A1g" customClass="EvolutionViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="L81-nv-k2B">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="SparkleShine.png" id="8tf-Iv-3Bw">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="SparkleShine-overlay.png" id="Oia-mn-0Pq" customClass="SparkleImageView">
-                                <rect key="frame" x="-114" y="0.0" width="548" height="416"/>
+                                <rect key="frame" x="-114" y="0.0" width="548" height="460"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Your monster can walk!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" id="jin-cH-Odr">
@@ -858,28 +863,18 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="bottom" id="411-yU-nTL">
-                                <rect key="frame" x="47" y="169" width="253" height="129"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="bottom" id="d5I-3e-uOs">
-                                <rect key="frame" x="57" y="179" width="253" height="129"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="bottom" id="6NT-4R-Ywu">
-                                <rect key="frame" x="40" y="150" width="240" height="139"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="KQC-eU-E5J" customClass="MonsterEvolutionImageView">
+                                <rect key="frame" x="20" y="138" width="291" height="199"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.95178817400000004" green="0.96384113049999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="8GS-hN-Tru"/>
                     <connections>
-                        <outlet property="evolution3" destination="d5I-3e-uOs" id="Hwv-3P-hqV"/>
                         <outlet property="evolutionDescriptionLabel" destination="jin-cH-Odr" id="Dov-gS-zLb"/>
-                        <outlet property="faceView" destination="411-yU-nTL" id="KMi-eq-LW6"/>
+                        <outlet property="monsterImagesForAnimation" destination="KQC-eU-E5J" id="06r-sh-9fr"/>
                         <outlet property="shineForRotation" destination="Oia-mn-0Pq" id="dWL-9K-ZmY"/>
-                        <outlet property="wobbleView" destination="6NT-4R-Ywu" id="5uP-9q-Rc9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AIf-Qc-b4l" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -962,11 +957,9 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <class className="EvolutionViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/EvolutionViewController.h"/>
             <relationships>
-                <relationship kind="outlet" name="evolution3" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="evolutionDescriptionLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="faceView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="monsterImagesForAnimation" candidateClass="MonsterEvolutionImageView"/>
                 <relationship kind="outlet" name="shineForRotation" candidateClass="SparkleImageView"/>
-                <relationship kind="outlet" name="wobbleView" candidateClass="UIImageView"/>
             </relationships>
         </class>
         <class className="ExistingProjectCell" superclassName="UITableViewCell">
@@ -990,6 +983,9 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 <relationship kind="outlet" name="nameLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="nicknameLabel" candidateClass="UILabel"/>
             </relationships>
+        </class>
+        <class className="MonsterEvolutionImageView" superclassName="UIImageView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MonsterEvolutionImageView.h"/>
         </class>
         <class className="NewEggViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NewEggViewController.h"/>
@@ -1049,13 +1045,14 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <class className="TaskListViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TaskListViewController.h"/>
             <relationships>
-                <relationship kind="outlet" name="blushedCheeksImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="blushedCheeksImage" candidateClass="MonsterEvolutionImageView"/>
                 <relationship kind="outlet" name="customStepTextField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fullMonsterImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="fullMonsterImage" candidateClass="MonsterEvolutionImageView"/>
                 <relationship kind="outlet" name="hpLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="monsterLeftEyeImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="monsterRightEyeImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="monsterEvolutionImage" candidateClass="MonsterEvolutionImageView"/>
+                <relationship kind="outlet" name="monsterLeftEyeImage" candidateClass="MonsterEvolutionImageView"/>
+                <relationship kind="outlet" name="monsterRightEyeImage" candidateClass="MonsterEvolutionImageView"/>
                 <relationship kind="outlet" name="mouthOpenImage" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="taskTable" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="xpLabel" candidateClass="UILabel"/>
@@ -1072,6 +1069,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="P5K-he-Un2"/>
-        <segue reference="h8v-6d-2Cj"/>
+        <segue reference="xpN-Fm-5R4"/>
     </inferredMetricsTieBreakers>
 </document>
